Bug fix remove overflow on larger screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,15 +1,10 @@
 body {
-    margin: 0;
+    margin-top: 0;
     padding: 0;
     height: 100vh; /* Setting height to viewport height */
-    overflow: hidden; /* Hide overflow */
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
-}
-
-.site-heading {
-    height: 100vh;
 }
 
 .btn {
@@ -34,35 +29,18 @@ header.masthead .overlay {
     opacity: 0.5;
 }
 
-header.masthead .page-heading,
-header.masthead .post-heading,
-header.masthead .site-heading {
-    padding: 200px 0 150px;
+.site-heading {
+    padding: 400px 0 300px;
     color: white;
-}
-
-@media only screen and (min-width: 768px) {
-
-    header.masthead .page-heading,
-    header.masthead .post-heading,
-    header.masthead .site-heading {
-        padding: 200px 0;
-    }
-}
-
-header.masthead .page-heading,
-header.masthead .site-heading {
     text-align: center;
 }
 
-header.masthead .page-heading h1,
-header.masthead .site-heading h1 {
+.site-heading h1 {
     font-size: 50px;
     margin-top: 0;
 }
 
-header.masthead .page-heading .subheading,
-header.masthead .site-heading .subheading {
+.subheading {
     font-size: 24px;
     font-weight: 300;
     line-height: 1.1;
@@ -73,55 +51,13 @@ header.masthead .site-heading .subheading {
 
 @media only screen and (min-width: 768px) {
 
-    header.masthead .page-heading h1,
+    header.masthead .site-heading {
+        padding-bottom: 290px;
+        padding-top: 340px; /* Adjust this value as needed */
+        height: auto;
+    }
+
     header.masthead .site-heading h1 {
         font-size: 80px;
     }
 }
-
-header.masthead .post-heading h1 {
-    font-size: 35px;
-}
-
-header.masthead .post-heading .meta,
-header.masthead .post-heading .subheading {
-    line-height: 1.1;
-    display: block;
-}
-
-header.masthead .post-heading .subheading {
-    font-size: 24px;
-    font-weight: 600;
-    margin: 10px 0 30px;
-    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-}
-
-header.masthead .post-heading .meta {
-    font-size: 20px;
-    font-weight: 300;
-    font-style: italic;
-    font-family: 'Lora', 'Times New Roman', serif;
-}
-
-header.masthead .post-heading .meta a {
-    color: #fff;
-}
-
-@media only screen and (min-width: 768px) {
-    header.masthead .post-heading h1 {
-        font-size: 55px;
-    }
-
-    header.masthead .post-heading .subheading {
-        font-size: 30px;
-    }
-}
-
-@media only screen and (min-width: 768px) {
-    header.masthead .page-heading,
-    header.masthead .site-heading {
-        padding-top: 340px; /* Adjust this value as needed */
-    }
-}
-
-
